// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnknownNode > renders UnknownNode component 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="OUIA-Generated-Card-_r_0_"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Node source
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-c-code-block"
      >
        <div
          class="pf-v6-c-code-block__content"
        >
          <pre
            class="pf-v6-c-code-block__pre"
          >
            <code
              class="pf-v6-c-code-block__code"
            >
              {}

            </code>
          </pre>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__footer"
    >
      <div
        class="pf-v6-c-alert pf-m-warning"
        data-ouia-component-id="OUIA-Generated-Alert-warning-_r_2_"
        data-ouia-component-type="PF6/Alert"
        data-ouia-safe="true"
      >
        <div
          class="pf-v6-c-alert__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 32 32"
            width="1em"
          >
            <path
              d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
            />
          </svg>
        </div>
        <h4
          class="pf-v6-c-alert__title"
        >
          <span
            class="pf-v6-screen-reader"
          >
            Warning alert:
          </span>
          Unknow node type
        </h4>
        <div
          class="pf-v6-c-alert__description"
        >
          The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnknownNode > renders UnknownNode component with a model 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="OUIA-Generated-Card-_r_3_"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Node source
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-c-code-block"
      >
        <div
          class="pf-v6-c-code-block__content"
        >
          <pre
            class="pf-v6-c-code-block__pre"
          >
            <code
              class="pf-v6-c-code-block__code"
            >
              prop1: value 1
prop2: value 2

            </code>
          </pre>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__footer"
    >
      <div
        class="pf-v6-c-alert pf-m-warning"
        data-ouia-component-id="OUIA-Generated-Alert-warning-_r_5_"
        data-ouia-component-type="PF6/Alert"
        data-ouia-safe="true"
      >
        <div
          class="pf-v6-c-alert__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 32 32"
            width="1em"
          >
            <path
              d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
            />
          </svg>
        </div>
        <h4
          class="pf-v6-c-alert__title"
        >
          <span
            class="pf-v6-screen-reader"
          >
            Warning alert:
          </span>
          Unknow node type
        </h4>
        <div
          class="pf-v6-c-alert__description"
        >
          The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
